[package]
name = "cluster_client"
version = "0.1.0"
authors = ["Nathan Corbyn <me@nathancorbyn.com>"]
edition = "2018"

[dependencies]
git2 = "0.9.1"
ctrlc = "3.1.3"
nix = "0.14.1"
chrono = "0.4.7"
libc = "0.2.58"
gethostname = "0.2.0"
cluster = { version = "0.1.0", path = "../" }
reqwest = "0.9.18"
