[package]
name = "cluster_server"
version = "0.1.0"
authors = ["Nathan Corbyn <me@nathancorbyn.com>"]
edition = "2018"

[dependencies]
git2 = "0.9.1"
rocket = "0.4.2"
cluster = { version = "0.1.0", path = "../" }
multipart = "0.16.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates", "json", "serve"]
