[package]
name = "cluster_server"
version = "0.2.0"
authors = ["Nathan Corbyn <me@nathancorbyn.com>"]
edition = "2018"

[dependencies]
git2 = "0.9.1"
rocket = "0.4.2"
multipart = "0.16.1"
cluster = { version = "0.2.0", path = "../" }
serde = { version = "1.0.94", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "tera_templates", "json", "serve"]
